tests/resources/errors/errors18.ac
import std;
import std.Error;

struct TestError :: *Error {
    const char* get_name() const {
        return "TestError";
    }
    const char* get_message() const {
        return "error raised!";
    }
}

struct A {
    int8 v;
    ~A() {
        std.print("deconstructor called!");
    }
}

A foo(bool b) raises TestError {
    if b {
        raise TestError{};
    } else {
        return A{ 64 };
    }
}

void main() {
    A a1 = try foo(false) {
        return;
    };
    std.print("...");
    A a2 = try foo(true) {
        std.print("caught error!");
        return;
    };
    std.print("not reached");
}